@@ -32,6 +32,7 @@ import org.voltdb.BackendTarget;
 import org.voltdb.ReplicationRole;
 import org.voltdb.StartAction;
 import org.voltdb.VoltDB;
+import org.voltdb.common.Constants;
 import org.voltdb.probe.MeshProber;
 
 import com.google_voltpatches.common.base.Joiner;
@@ -124,7 +125,8 @@ public class CommandLine extends VoltDB.Configuration
         cl.m_hostCount = m_hostCount;
         cl.m_enableAdd = m_enableAdd;
         cl.m_voltdbRoot = m_voltdbRoot;
-
+        cl.m_newCli = m_newCli;
+        cl.m_placementGroup = m_placementGroup;
         // deep copy the property map if it exists
         if (javaProperties != null) {
             cl.javaProperties = new TreeMap<String, String>();
@@ -344,6 +346,8 @@ public class CommandLine extends VoltDB.Configuration
 
     String voltFilePrefix = "";
     public CommandLine voltFilePrefix(String voltFilePrefix) {
+        if (m_newCli) return this;
+
         this.voltFilePrefix = voltFilePrefix;
         return this;
     }
@@ -562,7 +566,6 @@ public class CommandLine extends VoltDB.Configuration
         cmdline.add("-XX:CMSInitiatingOccupancyFraction=75");
         cmdline.add("-XX:+UseCMSInitiatingOccupancyOnly");
         cmdline.add("-XX:+CMSClassUnloadingEnabled");
-        cmdline.add("-XX:PermSize=64m");
 
         /*
          * Have RMI not invoke System.gc constantly
@@ -590,10 +593,11 @@ public class CommandLine extends VoltDB.Configuration
         if (includeTestOpts)
         {
             cmdline.add("-DLOG_SEGMENT_SIZE=8");
-            cmdline.add("-DVoltFilePrefix=" + voltFilePrefix);
+            if (!m_newCli) {
+                cmdline.add("-DVoltFilePrefix=" + voltFilePrefix);
+            }
             cmdline.add("-ea");
             cmdline.add("-XX:MaxDirectMemorySize=2g");
-            cmdline.add("-XX:-UseSplitVerifier");
         }
         else
         {
@@ -644,16 +648,21 @@ public class CommandLine extends VoltDB.Configuration
             cmdline.add("safemode");
         }
 
+        if (m_startAction == StartAction.PROBE && m_enableAdd) {
+            cmdline.add("enableadd");
+        }
+
         cmdline.add("host");
         if (!m_coordinators.isEmpty()) {
-            cmdline.add(m_coordinators.first());
+            cmdline.add(Joiner.on(',').skipNulls().join(m_coordinators));
         } else {
             cmdline.add(m_leader);
         }
         if (jarFileName() != null) {
             cmdline.add("catalog"); cmdline.add(jarFileName());
         }
-        if (pathToDeployment() != null) {
+        //Add deployment if its not probe
+        if (pathToDeployment() != null && m_startAction != StartAction.PROBE) {
             cmdline.add("deployment"); cmdline.add(pathToDeployment());
         }
 
@@ -696,6 +705,9 @@ public class CommandLine extends VoltDB.Configuration
         if (m_internalInterface != null && (m_externalInterface != null && !m_externalInterface.isEmpty()))
         {
             cmdline.add("externalinterface"); cmdline.add(m_externalInterface);
+        }
+        if (m_httpPort != Constants.HTTP_PORT_DISABLED) {
+            cmdline.add("httpport"); cmdline.add(Integer.toString(m_httpPort));
         }
 
         if (m_forceVoltdbCreate)
@@ -748,16 +760,23 @@ public class CommandLine extends VoltDB.Configuration
             cmdline.add("paused");
         }
 
-        cmdline.add("mesh"); cmdline.add(Joiner.on(',').skipNulls().join(m_coordinators));
+        if (m_sitesperhost != VoltDB.UNDEFINED) {
+            cmdline.add("sitesperhost");
+            cmdline.add(Integer.toString(m_sitesperhost));
+        }
 
+        //Add mesh and hostcount for probe only.
         if (m_startAction == StartAction.PROBE) {
+            cmdline.add("mesh"); cmdline.add(Joiner.on(',').skipNulls().join(m_coordinators));
             cmdline.add("hostcount"); cmdline.add(Integer.toString(m_hostCount));
         }
 
-        if (m_startAction == StartAction.PROBE || m_startAction == StartAction.INITIALIZE) {
+        if (!m_startAction.isLegacy()) {
             cmdline.add("voltdbroot"); cmdline.add(m_voltdbRoot.getPath());
         }
-
+        if (m_placementGroup != null) {
+            cmdline.add("placementgroup"); cmdline.add(m_placementGroup);
+        }
         return cmdline;
     }
 
@@ -1017,4 +1036,15 @@ public class CommandLine extends VoltDB.Configuration
         }
     }
 
+    boolean m_newCli = false;
+    //Return true if we are going to run init and start.
+    boolean isNewCli() {
+        return m_newCli;
+    }
+    public void setNewCli(boolean flag) { m_newCli = flag; };
+
+    String m_placementGroup = "";
+    public void setPlacementGroup(String placementGroup) {
+        m_placementGroup = placementGroup;
+    }
 }
